Closed Bug 1717955 Opened 5 years ago Closed 5 years ago

Thunderbird build busted: /builds/worker/checkouts/gecko/dom/base/RemoteOuterWindowProxy.cpp:83:23: error: 'mozilla::dom::WindowProxyHolder' is an incomplete type

Categories

(Thunderbird :: General, defect, P5)

defect

Tracking

(Not tracked)

RESOLVED FIXED
91 Branch

People

(Reporter: intermittent-bug-filer, Assigned: darktrojan)

Details

Attachments

(1 file)

Assignee: nobody → geoff
Status: NEW → ASSIGNED
Pushed by geoff@darktrojan.net: https://hg.mozilla.org/integration/autoland/rev/3eb4101af9f8 Include WindowProxyHolder.h to fix the Thunderbird build. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: