Bug 1717955 - Include WindowProxyHolder.h to fix the Thunderbird build. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D118661